@@ -594,7 +594,7 @@ svccmd_can_invoke(struct userNode *user, struct userNode *bot, struct svccmd *cm
 }
 
 static int
-svccmd_expand_alias(struct svccmd *cmd, unsigned int old_argc, char *old_argv[], char *new_argv[]) {
+svccmd_expand_alias(struct svccmd *cmd, struct userNode *user, unsigned int old_argc, char *old_argv[], char *new_argv[]) {
     unsigned int ii, new_argc;
     char *arg;
 
@@ -626,14 +626,30 @@ svccmd_expand_alias(struct svccmd *cmd, unsigned int old_argc, char *old_argv[],
                 log_module(MAIN_LOG, LOG_ERROR, "Alias expansion parse error in %s (near %s; %s.%s arg %d).", arg, end_num, cmd->parent->bot->nick, cmd->name, ii);
                 return 0;
             }
-            if (lbound >= old_argc)
-                return -1;
             if (ubound >= old_argc)
                 ubound = old_argc - 1;
             if (lbound < old_argc)
                 for (jj = lbound; jj <= ubound; )
                     new_argv[new_argc++] = old_argv[jj++];
         } else {
+            switch(arg[1]) {
+                case 'a':
+                    new_argv[new_argc++] = (user && user->handle_info) ? user->handle_info->handle : "(account)";
+                    break;
+                case 'n':
+                    new_argv[new_argc++] = user ? user->nick : "(nick)";
+                    break;
+                case 'm':
+#ifdef WITH_PROTOCOL_P10
+                    new_argv[new_argc++] = user ? user->numeric : "(numnick)";
+#else
+                    new_argv[new_argc++] = "(This ircd protocol has no numnicks!)";
+#endif
+                    break;
+                default:
+                    log_module(MAIN_LOG, LOG_ERROR, "Alias expansion: I do not know how to handle %s (%s.%s arg %d).", arg, cmd->parent->bot->nick, cmd->name, ii);
+                    return 0;
+            }
             log_module(MAIN_LOG, LOG_ERROR, "Alias expansion: I do not know how to handle %s (%s.%s arg %d).", arg, cmd->parent->bot->nick, cmd->name, ii);
             return 0;
         }
@@ -713,7 +729,7 @@ svccmd_invoke_argv(struct userNode *user, struct service *service, struct chanNo
         char *new_argv[MAXNUMPARAMS];
         int res;
 
-        res = svccmd_expand_alias(cmd, argc, argv, new_argv);
+        res = svccmd_expand_alias(cmd, user, argc, argv, new_argv);
         if (res < 0) {
             send_message(user, service->bot, "MSG_MISSING_PARAMS", cmd->name);
             return 0;
